[package]
name = "cloudinary"
description = "A Rust library for the Cloudinary API"
license = "MIT OR Apache-2.0"
keywords = ["cloudinary", "api", "image", "video", "upload"]
version = "0.8.0"
edition = "2021"
rust-version = "1.65.0"                                      # due to let-else


[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
itertools = "0.13.0"
mime = "0.3.17"
reqwest = { version = "0.12.7", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"
sha1 = "0.10.6"
tokio = { version = "1.40.0", features = ["rt", "macros"] }
tokio-util = "0.7.12"
url = "2.5.2"

[dev-dependencies]
dotenv = "0.15.0"
pretty_assertions = "1.4.1"

# for minimal-versions
[target.'cfg(any())'.dependencies]
openssl = { version = "0.10.59", optional = true } # needed to allow foo to build with -Zminimal-versions
