[package]
name = "cloudinary"
description = "A Rust library for the Cloudinary API"
license = "MIT OR Apache-2.0"
keywords = ["cloudinary", "api", "image", "video", "upload"]
version = "0.8.1"
edition = "2021"
rust-version = "1.65.0"                                      # due to let-else
repository = "https://github.com/Lurk/cloudinary_rs"


[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
itertools = "0.14.0"
mime = "0.3.17"
reqwest = { version = "0.12.24", features = [
	"json",
	"multipart",
	"stream",
	"rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
tokio = { version = "1.48.0", features = ["rt", "macros"] }
tokio-util = "0.7.12"
url = "2.5.2"

[dev-dependencies]
dotenv = "0.15.0"
pretty_assertions = "1.4.1"

# Minimal-versions test failing due to openssl being out of date.
# Force more recent version of openssl for every configuration it is required.
# ref: https://github.com/sfackler/rust-openssl/issues/1724
[target.'cfg(any())'.dependencies]
openssl = { version = "0.10.75", optional = true }
