[package]
name = "cloudinary"
description = "A Rust library for the Cloudinary API"
license = "MIT OR Apache-2.0"
keywords = ["cloudinary", "api", "image", "video", "upload"]
version = "0.8.2"
edition = "2024"
rust-version = "1.85.0"                                      # due to hashbrown@0.17 (edition2024)
repository = "https://github.com/Lurk/cloudinary_rs"


[dependencies]
anyhow = "1.0.102"
base16ct = { version = "1.0.0", features = ["alloc"] }
chrono = "0.4.44"
itertools = "0.14.0"
mime = "0.3.17"
reqwest = { version = "0.13.3", features = [
	"json",
	"multipart",
	"stream",
	"rustls",
] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
sha1 = "0.11.0"
tokio = { version = "1.52.3", features = ["rt", "macros"] }
tokio-util = "0.7.18"
url = "2.5.8"

[dev-dependencies]
dotenv = "0.15.0"
pretty_assertions = "1.4.1"

# Minimal-versions test failing due to openssl being out of date.
# Force more recent version of openssl for every configuration it is required.
# ref: https://github.com/sfackler/rust-openssl/issues/1724
[target.'cfg(any())'.dependencies]
openssl = { version = "0.10.75", optional = true }
